--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -77,13 +77,18 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const status = `QA ${'${{ job.status }}'.toUpperCase()}`;
-            const artifacts = `Artifacts: 
+            const jobStatus = '${{ job.status }}'.toUpperCase()
+            const status = `QA ${jobStatus}`
+            const artifacts = `Artifacts:
 - Playwright report (HTML)
-- Test videos & traces`;
+- Test videos & traces`
             const body = status.includes('SUCCESS')
-              ? `✅ ${status}\n\n${artifacts}`
-              : `❌ ${status}\n\nPlease review the QA artifacts for logs, screenshots, and videos.`;
+              ? `✅ ${status}
+
+${artifacts}`
+              : `❌ ${status}
+
+Please review the QA artifacts for logs, screenshots, and videos.`
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
