--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+
 jobs:
   qa:
     runs-on: ubuntu-latest
