--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -35,7 +35,9 @@ jobs:
 
       - name: Build
         working-directory: frontend
-        run: npm run build
+        run: |
+          set -euo pipefail
+          npm run build 2>&1 | tee ../build.log
 
       - name: Start preview server
         working-directory: frontend
@@ -51,7 +53,9 @@ jobs:
         working-directory: frontend
         env:
           PLAYWRIGHT_BASE_URL: http://127.0.0.1:4173
-        run: npx playwright test
+        run: |
+          set -euo pipefail
+          npx playwright test 2>&1 | tee ../playwright.log
 
       - name: Stop preview server
         if: always()
@@ -76,21 +80,16 @@ jobs:
           path: frontend/test-results
           if-no-files-found: warn
 
-      - name: Comment on PR
+      - name: Claude QA review
         if: always()
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const jobStatus = '${{ job.status }}'.toUpperCase();
-            const status = `QA ${jobStatus}`;
-            const artifacts = "Artifacts:\n- Playwright report (HTML)\n- Test videos & traces";
-            const body = status.includes('SUCCESS')
-              ? `✅ ${status}\n\n${artifacts}`
-              : `❌ ${status}\n\nPlease review the QA artifacts for logs, screenshots, and videos.`;
-            await github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-              body,
-            });
+        env:
+          CLAUDE_API_KEY: ${{ secrets.CLAUDE_API_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install git+https://github.com/Sanchay-T/open-code-blocks.git
+          ob1 qa --pr ${{ github.event.pull_request.number }} \
+            --target https://github.com/${{ github.repository }}.git \
+            --build-log build.log \
+            --test-log playwright.log \
+            --artifacts "playwright-report, playwright-test-results"
