--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -87,7 +87,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           python -m pip install --upgrade pip
-          python -m pip install git+https://github.com/Sanchay-T/open-code-blocks.git
+          export OB1_REPO_URL="https://x-access-token:${GITHUB_TOKEN}@github.com/Sanchay-T/open-code-blocks.git"
+          python -m pip install "git+$OB1_REPO_URL"
           ob1 qa --pr ${{ github.event.pull_request.number }} \
             --target https://github.com/${{ github.repository }}.git \
             --build-log build.log \
