--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -88,7 +88,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           export OB1_REPO_URL="https://x-access-token:${GITHUB_TOKEN}@github.com/Sanchay-T/open-code-blocks.git"
-          python -m pip install "git+$OB1_REPO_URL"
+          python -m pip install "git+$OB1_REPO_URL@main#egg=ob1"
           ob1 qa --pr ${{ github.event.pull_request.number }} \
             --target https://github.com/${{ github.repository }}.git \
             --build-log build.log \
