fix: install Claude Code CLI before QA review

--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -80,6 +80,10 @@ jobs:
           path: frontend/test-results
           if-no-files-found: warn
 
+      - name: Install Claude Code CLI
+        run: |
+          npm install -g @anthropic-ai/claude-code
+
       - name: Claude QA review
         if: always()
         env:
